Meta tags updated

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="google-site-verification" content="HF1knJ88QTCyQNekgTIWy20rbp0lsBP-oTTd0yyV1aE" />
+        <meta property="og:title" content="Isaiah Noel P. Salazar">
+        <meta property="og:description" content="Isaiah Noel P. Salazar's website">
+        <meta property="og:image" content="resources/icon/banner.png">
+        <meta property="og:url" content="https://isaiahnoelsalazar.github.io/my-website/">
+        <meta property="og:type" content="website">
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="Isaiah Noel P. Salazar">
+        <meta name="twitter:description" content="Isaiah Noel P. Salazar's website">
+        <meta name="twitter:image" content="resources/icon/banner.png">
+        <meta name="description" content="Isaiah Noel P. Salazar's website">
+        <meta name="keywords" content="HTML, CSS, JavaScript, Web Development, Personal Website, Isaiah Noel P. Salazar, Portfolio">
+        <meta name="author" content="Isaiah Noel P. Salazar">
         <meta name="theme-color" content="#1F1F1F">
         <link rel="apple-touch-icon" sizes="57x57" href="resources/icon/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="resources/icon/apple-icon-60x60.png">
