--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         <meta name="twitter:description" content="Isaiah Noel P. Salazar's website">
         <meta name="twitter:image" content="resources/icon/banner.png">
         <meta name="description" content="Isaiah Noel P. Salazar's website">
-        <meta name="keywords" content="HTML, CSS, JavaScript, Web Development, Personal Website, Isaiah Noel P. Salazar, Portfolio">
+        <meta name="keywords" content="Isaiah Noel P. Salazar, Isaiah Noel Salazar, Personal Website, Portfolio, isaiah noel salazar, isaiah, noel, salazar, isaiah salazar, personal, website, portfolio">
         <meta name="author" content="Isaiah Noel P. Salazar">
+        <meta name="robots" content="index, follow">
         <meta name="theme-color" content="#1F1F1F">
         <link rel="apple-touch-icon" sizes="57x57" href="resources/icon/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="resources/icon/apple-icon-60x60.png">
