Added link to Android dependency

--- a/index.html
+++ b/index.html
@@ -115,20 +115,20 @@
                         <h2>My Favorite Works</h2>
                     </div>
                     <div id="separator"></div>
-                    <!-- <div>
+                    <div>
                         <div>
                             <img src="resources/android.png" alt="work1_icon">
-                                The Android robot is reproduced or modified from work created and shared by Google 
-                                and used according to terms described in the Creative Commons 3.0 Attribution License.
+                            <!-- The Android robot is reproduced or modified from work created and shared by Google 
+                                and used according to terms described in the Creative Commons 3.0 Attribution License. -->
                         </div>
                         <div>
-                            <h2>mywebsite_androiddependency</h2>
+                            <h2>SimpleFunctions</h2>
                             <p>An Android dependency that offers functionalities to make development easy.</p>
-                            <a href="https://github.com/saiaaaaaaa/my-website?tab=readme-ov-file#android-dependency">Learn more</a>
+                            <a href="https://github.com/isaiahnoelsalazar/SimpleFunctions/">Learn more</a>
                         </div>
                     </div>
                     <div id="separator"></div>
-                    <div>
+                    <!-- <div>
                         <div>
                             <img src="resources/package.png" alt="work2_icon">
                         </div>
@@ -192,6 +192,13 @@
                     <h2>C# Programs</h2>
                     <div class="page-list">
                         <a href="https://github.com/isaiahnoelsalazar/POS-System-Prototype/">POS System Prototype</a>
+                    </div>
+                    <div id="spacer"></div>
+                    <div id="separator"></div>
+                    <div id="spacer"></div>
+                    <h2>Android Dependencies</h2>
+                    <div class="page-list">
+                        <a href="https://isaiahnoelsalazar.github.io/SimpleFunctions/">SimpleFunctions (Android 7.1+)</a>
                     </div>
                 </div>
                 <div id="spacer"></div>
