Fixed broken links

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
                 "prefetch": [
                     {
                         "urls": [
+                            "https://github.com/isaiahnoelsalazar/POS-System-Prototype/",
+                            "https://github.com/isaiahnoelsalazar/SimpleFunctions/",
                             "https://isaiahnoelsalazar.github.io/bad-phone-number-inputs/",
                             "https://isaiahnoelsalazar.github.io/basabasa-download/",
                             "https://isaiahnoelsalazar.github.io/black/",
@@ -198,7 +200,7 @@
                     <div id="spacer"></div>
                     <h2>Android Dependencies</h2>
                     <div class="page-list">
-                        <a href="https://isaiahnoelsalazar.github.io/SimpleFunctions/">SimpleFunctions (Android 7.1+)</a>
+                        <a href="https://github.com/isaiahnoelsalazar/SimpleFunctions/">SimpleFunctions (Android 7.1+)</a>
                     </div>
                 </div>
                 <div id="spacer"></div>
