--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="google-site-verification" content="HF1knJ88QTCyQNekgTIWy20rbp0lsBP-oTTd0yyV1aE" />
+        <meta name="msvalidate.01" content="4FA93A0B497A177CB4CDC5AD79DBDD0C" />
         <meta property="og:title" content="Isaiah Noel P. Salazar">
         <meta property="og:description" content="Isaiah Noel P. Salazar's website">
         <meta property="og:image" content="resources/icon/banner.png">
