--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             <h3>Welcome to my website!</h3>
                             <p>I am a 4th-year BSIT student. Throughout my academic journey, I have developed a strong foundation in areas such as programming, and software development.</p>
                             <div>
-                                <a onclick="alert('No CV uploaded yet.')">Download CV</a>
+                                <a href="Isaiah_Noel_Salazar_CV.pdf" download="Isaiah_Noel_Salazar_CV.pdf">Download CV</a>
                                 <a onclick="mouseClick(1)">View my works</a>
                                 <a onclick="mouseClick(2)">Contact me</a>
                             </div>
