Meta tags updated

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <meta name="twitter:description" content="Isaiah Noel P. Salazar's website">
         <meta name="twitter:image" content="resources/icon/banner.png">
         <meta name="description" content="Isaiah Noel P. Salazar's website">
-        <meta name="keywords" content="Isaiah Noel P. Salazar, Isaiah Noel Salazar, Personal Website, Portfolio, isaiah noel salazar, isaiah, noel, salazar, isaiah salazar, personal, website, portfolio">
+        <meta name="keywords" content="Isaiah Noel P. Salazar, Isaiah Noel Salazar, Personal Website, Portfolio, isaiah noel salazar, isaiah, noel, salazar, isaiah salazar, personal, website, portfolio, isaiah noel salazar website, Isaiah Noel P. Salazar website, Isaiah Noel Salazar website">
         <meta name="author" content="Isaiah Noel P. Salazar">
         <meta name="robots" content="index, follow">
         <meta name="theme-color" content="#1F1F1F">
