Added more project links

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             "https://isaiahnoelsalazar.github.io/website-observation-1/",
                             "https://isaiahnoelsalazar.github.io/women-with-baskets/",
                             "http://openweb.fwh.is/",
-                            "pages/webbook.html",
+                            "http://openweb.fwh.is/e-commerce.php/",
                             "https://www.facebook.com/profile.php?id=100085006483044",
                             "https://x.com/IsaiahNoelSal16"
                         ]
@@ -165,6 +165,7 @@
                         <a href="https://isaiahnoelsalazar.github.io/black/">Black</a>
                         <a href="https://isaiahnoelsalazar.github.io/codenotes/">Code Notes</a>
                         <a href="https://isaiahnoelsalazar.github.io/doc-to-pdf/">DOC to PDF</a>
+                        <a href="http://openweb.fwh.is/e-commerce.php/">E-Commerce Prototype</a>
                         <a href="https://isaiahnoelsalazar.github.io/electronic-gadget-store/">Electronic Gadget Store | School Assignment</a>
                         <a href="https://isaiahnoelsalazar.github.io/live-html/">Live HTML</a>
                         <a href="http://openweb.fwh.is/">Live PHP Pages</a>
