Meta tags updated

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
         <meta name="google-site-verification" content="HF1knJ88QTCyQNekgTIWy20rbp0lsBP-oTTd0yyV1aE" />
         <meta name="msvalidate.01" content="4FA93A0B497A177CB4CDC5AD79DBDD0C" />
         <meta property="og:title" content="Isaiah Noel P. Salazar">
-        <meta property="og:description" content="Isaiah Noel P. Salazar's website">
+        <meta property="og:description" content="Isaiah Noel P. Salazar's website that aims to showcase my projects.">
         <meta property="og:image" content="resources/icon/banner.png">
         <meta property="og:url" content="https://isaiahnoelsalazar.github.io/my-website/">
         <meta property="og:type" content="website">
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="Isaiah Noel P. Salazar">
-        <meta name="twitter:description" content="Isaiah Noel P. Salazar's website">
+        <meta name="twitter:description" content="Isaiah Noel P. Salazar's website that aims to showcase my projects.">
         <meta name="twitter:image" content="resources/icon/banner.png">
-        <meta name="description" content="Isaiah Noel P. Salazar's website">
+        <meta name="description" content="Isaiah Noel P. Salazar's website that aims to showcase my projects.">
         <meta name="keywords" content="Isaiah Noel P. Salazar, Isaiah Noel Salazar, Personal Website, Portfolio, isaiah noel salazar, isaiah, noel, salazar, isaiah salazar, personal, website, portfolio, isaiah noel salazar website, Isaiah Noel P. Salazar website, Isaiah Noel Salazar website">
         <meta name="author" content="Isaiah Noel P. Salazar">
         <meta name="robots" content="index, follow">
