Added more project links

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
                 "prefetch": [
                     {
                         "urls": [
+                            "https://github.com/isaiahnoelsalazar/CSSimpleFunctions/",
                             "https://github.com/isaiahnoelsalazar/POS-System-Prototype/",
+                            "https://github.com/isaiahnoelsalazar/SamplePythonTurtleYellowDucky/",
                             "https://github.com/isaiahnoelsalazar/SimpleFunctions/",
                             "https://isaiahnoelsalazar.github.io/bad-phone-number-inputs/",
                             "https://isaiahnoelsalazar.github.io/basabasa-download/",
@@ -131,17 +133,17 @@
                         </div>
                     </div>
                     <div id="separator"></div>
-                    <!-- <div>
+                    <div>
                         <div>
                             <img src="resources/package.png" alt="work2_icon">
                         </div>
                         <div>
-                            <h2>mywebsite_nugetpackage</h2>
+                            <h2>CSSimpleFunctions</h2>
                             <p>NuGet package designed to make development in C# easier.</p>
-                            <a href="https://github.com/saiaaaaaaa/my-website?tab=readme-ov-file#nuget-package">Learn more</a>
+                            <a href="https://github.com/isaiahnoelsalazar/CSSimpleFunctions/">Learn more</a>
                         </div>
                     </div>
-                    <div id="separator"></div> -->
+                    <div id="separator"></div>
                     <div>
                         <div>
                             <img src="resources/icon/my-website-icon.png" alt="work3_icon">
@@ -201,9 +203,23 @@
                     <div id="spacer"></div>
                     <div id="separator"></div>
                     <div id="spacer"></div>
+                    <h2>Python Programs</h2>
+                    <div class="page-list">
+                        <a href="https://github.com/isaiahnoelsalazar/SamplePythonTurtleYellowDucky/">Sample Python Turtle - Yellow Ducky</a>
+                    </div>
+                    <div id="spacer"></div>
+                    <div id="separator"></div>
+                    <div id="spacer"></div>
                     <h2>Android Dependencies</h2>
                     <div class="page-list">
                         <a href="https://github.com/isaiahnoelsalazar/SimpleFunctions/">SimpleFunctions (Android 7.1+)</a>
+                    </div>
+                    <div id="spacer"></div>
+                    <div id="separator"></div>
+                    <div id="spacer"></div>
+                    <h2>NuGet Packages</h2>
+                    <div class="page-list">
+                        <a href="https://github.com/isaiahnoelsalazar/CSSimpleFunctions/">CSSimpleFunctions (.NET 6.0+ | .NET Framework 4.5+)</a>
                     </div>
                 </div>
                 <div id="spacer"></div>
