--- a/index.html
+++ b/index.html
@@ -9,35 +9,35 @@
         <meta name="google-site-verification" content="HF1knJ88QTCyQNekgTIWy20rbp0lsBP-oTTd0yyV1aE" />
         <meta name="msvalidate.01" content="4FA93A0B497A177CB4CDC5AD79DBDD0C" />
         <meta property="og:title" content="Isaiah Noel P. Salazar">
-        <meta property="og:description" content="Isaiah Noel P. Salazar's website that aims to showcase my projects.">
-        <meta property="og:image" content="resources/icon/banner.png">
+        <meta property="og:description" content="A personal website built to showcase my skills, the variety of projects I have accumulated through the years, and my contact information and updated CV.">
+        <meta property="og:image" content="resources/banner.png">
         <meta property="og:url" content="https://isaiahnoelsalazar.github.io/my-website/">
         <meta property="og:type" content="website">
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="Isaiah Noel P. Salazar">
-        <meta name="twitter:description" content="Isaiah Noel P. Salazar's website that aims to showcase my projects.">
-        <meta name="twitter:image" content="resources/icon/banner.png">
-        <meta name="description" content="Isaiah Noel P. Salazar's website that aims to showcase my projects.">
+        <meta name="twitter:description" content="A personal website built to showcase my skills, the variety of projects I have accumulated through the years, and my contact information and updated CV.">
+        <meta name="twitter:image" content="resources/banner.png">
+        <meta name="description" content="A personal website built to showcase my skills, the variety of projects I have accumulated through the years, and my contact information and updated CV.">
         <meta name="keywords" content="Isaiah Noel P. Salazar, Isaiah Noel Salazar, Personal Website, Portfolio, isaiah noel salazar, isaiah, noel, salazar, isaiah salazar, personal, website, portfolio, isaiah noel salazar website, Isaiah Noel P. Salazar website, Isaiah Noel Salazar website">
         <meta name="author" content="Isaiah Noel P. Salazar">
         <meta name="robots" content="index, follow">
         <meta name="theme-color" content="#1F1F1F">
-        <link rel="apple-touch-icon" sizes="57x57" href="resources/icon/apple-icon-57x57.png">
-        <link rel="apple-touch-icon" sizes="60x60" href="resources/icon/apple-icon-60x60.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="resources/icon/apple-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="resources/icon/apple-icon-76x76.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="resources/icon/apple-icon-114x114.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="resources/icon/apple-icon-120x120.png">
-        <link rel="apple-touch-icon" sizes="144x144" href="resources/icon/apple-icon-144x144.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="resources/icon/apple-icon-152x152.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="resources/icon/apple-icon-180x180.png">
-        <link rel="icon" type="image/png" sizes="192x192"  href="resources/icon/android-icon-192x192.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="resources/icon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="96x96" href="resources/icon/favicon-96x96.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="resources/icon/favicon-16x16.png">
-        <link rel="manifest" href="resources/icon/manifest.json">
+        <link rel="apple-touch-icon" sizes="57x57" href="resources/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="resources/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="resources/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="resources/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="resources/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="resources/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="resources/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="resources/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="resources/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="resources/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="resources/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="resources/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="resources/favicon-16x16.png">
+        <link rel="manifest" href="resources/manifest.json">
         <meta name="msapplication-TileColor" content="#1F1F1F">
-        <meta name="msapplication-TileImage" content="resources/icon/ms-icon-144x144.png">
+        <meta name="msapplication-TileImage" content="resources/ms-icon-144x144.png">
         <title>Isaiah Noel P. Salazar</title>
         <!--this works only in Chrome i think -->
         <script type="speculationrules">
@@ -86,15 +86,15 @@
     </head>
     <body>
         <div id="navbar">
-            <a class="tab-container" onmouseenter="mouseEnter(0)" onmouseleave="mouseLeave(0)" onclick="mouseClick(0)">
+            <div class="tab-container" onmouseenter="mouseEnter(0)" onmouseleave="mouseLeave(0)" onclick="mouseClick(0)">
                 <p class="tab selected">Home</p>
-            </a>
-            <a class="tab-container" onmouseenter="mouseEnter(1)" onmouseleave="mouseLeave(1)" onclick="mouseClick(1)">
+            </div>
+            <div class="tab-container" onmouseenter="mouseEnter(1)" onmouseleave="mouseLeave(1)" onclick="mouseClick(1)">
                 <p class="tab">My Works</p>
-            </a>
-            <a class="tab-container" onmouseenter="mouseEnter(2)" onmouseleave="mouseLeave(2)" onclick="mouseClick(2)">
+            </div>
+            <div class="tab-container" onmouseenter="mouseEnter(2)" onmouseleave="mouseLeave(2)" onclick="mouseClick(2)">
                 <p class="tab">Contacts</p>
-            </a>
+            </div>
         </div>
         <div id="main">
             <div class="home content">
@@ -102,17 +102,17 @@
                     <div>
                         <div>
                             <h1>Isaiah Noel P. Salazar</h1>
-                            <h3>Welcome to my website!</h3>
+                            <h2>Welcome to my website!</h2>
                             <p>I am a 4th-year BSIT student. Throughout my academic journey, I have developed a strong foundation in areas such as programming, and software development.</p>
                             <div>
                                 <a href="Isaiah_Noel_Salazar_CV.pdf" download="Isaiah_Noel_Salazar_CV.pdf">Download CV</a>
-                                <a onclick="mouseClick(1)">View my works</a>
-                                <a onclick="mouseClick(2)">Contact me</a>
+                                <div onclick="mouseClick(1)">View my works</div>
+                                <div onclick="mouseClick(2)">Contact me</div>
                             </div>
                         </div>
                     </div>
                     <div>
-                        <img src="resources/profile_pic.jpg" alt="profile_picture">
+                        <img fetchpriority="high" src="resources/profile_pic.jpg" alt="profile_picture">
                     </div>
                 </div>
                 <div id="home-div-2">
@@ -129,7 +129,7 @@
                         <div>
                             <h2>SimpleFunctions</h2>
                             <p>An Android dependency that offers functionalities to make development easy.</p>
-                            <a href="https://github.com/isaiahnoelsalazar/SimpleFunctions/">Learn more</a>
+                            <a href="https://github.com/isaiahnoelsalazar/SimpleFunctions/">View in GitHub</a>
                         </div>
                     </div>
                     <div id="separator"></div>
@@ -140,13 +140,13 @@
                         <div>
                             <h2>CSSimpleFunctions</h2>
                             <p>NuGet package designed to make development in C# easier.</p>
-                            <a href="https://github.com/isaiahnoelsalazar/CSSimpleFunctions/">Learn more</a>
+                            <a href="https://github.com/isaiahnoelsalazar/CSSimpleFunctions/">View in GitHub</a>
                         </div>
                     </div>
                     <div id="separator"></div>
                     <div>
                         <div>
-                            <img src="resources/icon/my-website-icon.png" alt="work3_icon">
+                            <img src="resources/my-website-icon.png" alt="work3_icon">
                         </div>
                         <div>
                             <h2>My website</h2>
