Added more project links

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                             "https://github.com/isaiahnoelsalazar/CSSimpleFunctions/",
                             "https://github.com/isaiahnoelsalazar/POS-System-Prototype/",
                             "https://github.com/isaiahnoelsalazar/SamplePythonTurtleYellowDucky/",
+                            "https://github.com/isaiahnoelsalazar/ScreenRecorder/",
                             "https://github.com/isaiahnoelsalazar/SimpleFunctions/",
                             "https://isaiahnoelsalazar.github.io/bad-phone-number-inputs/",
                             "https://isaiahnoelsalazar.github.io/basabasa-download/",
@@ -198,6 +199,7 @@
                     <h2>C# Programs</h2>
                     <div class="page-list">
                         <a href="https://github.com/isaiahnoelsalazar/AUTOLANDIA-Sales-and-Revenue-Report-Generation-System/">AUTOLANDIA Sales and Revenue Report Generation System</a>
+                        <a href="https://github.com/isaiahnoelsalazar/ScreenRecorder/">Screen Recorder</a>
                         <a href="https://github.com/isaiahnoelsalazar/POS-System-Prototype/">POS System Prototype</a>
                     </div>
                     <div id="spacer"></div>
