Added more project links

--- a/index.html
+++ b/index.html
@@ -52,17 +52,20 @@
                             "https://github.com/isaiahnoelsalazar/SimpleFunctions/",
                             "https://isaiahnoelsalazar.github.io/bad-phone-number-inputs/",
                             "https://isaiahnoelsalazar.github.io/basabasa-download/",
+                            "https://isaiahnoelsalazar.github.io/billcalculator-download/",
                             "https://isaiahnoelsalazar.github.io/black/",
                             "https://isaiahnoelsalazar.github.io/codenotes/",
                             "https://isaiahnoelsalazar.github.io/compass-download/",
                             "https://isaiahnoelsalazar.github.io/doc-to-pdf/",
                             "https://isaiahnoelsalazar.github.io/electronic-gadget-store/",
+                            "https://isaiahnoelsalazar.github.io/htmleditor-download/",
                             "https://isaiahnoelsalazar.github.io/live-html/",
                             "https://isaiahnoelsalazar.github.io/matchupgame-download/",
                             "https://isaiahnoelsalazar.github.io/multiplication-table/",
                             "https://isaiahnoelsalazar.github.io/pdf-to-doc/",
                             "https://isaiahnoelsalazar.github.io/shoppinglist-download/",
                             "https://isaiahnoelsalazar.github.io/simple-web-calculator/",
+                            "https://isaiahnoelsalazar.github.io/squulite-download/",
                             "https://isaiahnoelsalazar.github.io/studentregistrationapp-download/",
                             "https://isaiahnoelsalazar.github.io/thml/",
                             "https://isaiahnoelsalazar.github.io/typey/",
@@ -188,9 +191,12 @@
                     <h2>Android Applications</h2>
                     <div class="page-list">
                         <a href="https://isaiahnoelsalazar.github.io/basabasa-download/">Basabasa: Free Manga Reader App (Android 7.1+)</a>
+                        <a href="https://isaiahnoelsalazar.github.io/billcalculator-download/">Bill Calculator (Android 4.1+)</a>
                         <a href="https://isaiahnoelsalazar.github.io/compass-download/">Compass (Android 4.2+)</a>
+                        <a href="https://isaiahnoelsalazar.github.io/htmleditor-download/">HTML Editor (Android 4.2+)</a>
                         <a href="https://isaiahnoelsalazar.github.io/matchupgame-download/">Match Up Game (Android 7.0+) | School Assignment</a>
                         <a href="https://isaiahnoelsalazar.github.io/shoppinglist-download/">Shopping List App (Android 7.0+)</a>
+                        <a href="https://isaiahnoelsalazar.github.io/squulite-download/">SQuuLite (Android 7.0+)</a>
                         <a href="https://isaiahnoelsalazar.github.io/studentregistrationapp-download/">Student Registration App (Android 7.0+)</a>
                     </div>
                     <div id="spacer"></div>
