Added more project links

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                         "urls": [
                             "https://github.com/isaiahnoelsalazar/CSSimpleFunctions/",
                             "https://github.com/isaiahnoelsalazar/POS-System-Prototype/",
+                            "https://github.com/isaiahnoelsalazar/SalazarIsaiahNoel_BSIT701P_Lab2/",
                             "https://github.com/isaiahnoelsalazar/SamplePythonTurtleYellowDucky/",
                             "https://github.com/isaiahnoelsalazar/ScreenRecorder/",
                             "https://github.com/isaiahnoelsalazar/SimpleFunctions/",
@@ -214,6 +215,13 @@
                     <h2>Python Programs</h2>
                     <div class="page-list">
                         <a href="https://github.com/isaiahnoelsalazar/SamplePythonTurtleYellowDucky/">Sample Python Turtle - Yellow Ducky</a>
+                    </div>
+                    <div id="spacer"></div>
+                    <div id="separator"></div>
+                    <div id="spacer"></div>
+                    <h2>Unity Games</h2>
+                    <div class="page-list">
+                        <a href="https://github.com/isaiahnoelsalazar/SalazarIsaiahNoel_BSIT701P_Lab2/">SalazarIsaiahNoel_BSIT701P_Lab2 | School Assignment</a>
                     </div>
                     <div id="spacer"></div>
                     <div id="separator"></div>
