--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                             "https://isaiahnoelsalazar.github.io/live-html/",
                             "https://isaiahnoelsalazar.github.io/matchupgame-download/",
                             "https://isaiahnoelsalazar.github.io/multiplication-table/",
+                            "https://isaiahnoelsalazar.github.io/note-download/",
                             "https://isaiahnoelsalazar.github.io/pdf-to-doc/",
                             "https://isaiahnoelsalazar.github.io/shoppinglist-download/",
                             "https://isaiahnoelsalazar.github.io/simple-web-calculator/",
@@ -197,6 +198,7 @@
                         <a href="https://isaiahnoelsalazar.github.io/compass-download/">Compass (Android 4.2+)</a>
                         <a href="https://isaiahnoelsalazar.github.io/htmleditor-download/">HTML Editor (Android 4.2+)</a>
                         <a href="https://isaiahnoelsalazar.github.io/matchupgame-download/">Match Up Game (Android 7.0+) | School Assignment</a>
+                        <a href="https://isaiahnoelsalazar.github.io/note-download/">Note (Android 4.1+)</a>
                         <a href="https://github.com/isaiahnoelsalazar/sAP/">sAP (Android 6.0+)</a>
                         <a href="https://isaiahnoelsalazar.github.io/shoppinglist-download/">Shopping List App (Android 7.0+)</a>
                         <a href="https://isaiahnoelsalazar.github.io/squulite-download/">SQuuLite (Android 7.0+)</a>
