--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                             "https://github.com/isaiahnoelsalazar/CSSimpleFunctions/",
                             "https://github.com/isaiahnoelsalazar/POS-System-Prototype/",
                             "https://github.com/isaiahnoelsalazar/SalazarIsaiahNoel_BSIT701P_Lab2/",
+                            "https://github.com/isaiahnoelsalazar/SamplePythonTurtleKeyInput/",
                             "https://github.com/isaiahnoelsalazar/SamplePythonTurtleYellowDucky/",
                             "https://github.com/isaiahnoelsalazar/sAP/",
                             "https://github.com/isaiahnoelsalazar/ScreenRecorder/",
@@ -218,6 +219,7 @@
                     <div id="spacer"></div>
                     <h2>Python Programs</h2>
                     <div class="page-list">
+                        <a href="https://github.com/isaiahnoelsalazar/SamplePythonTurtleKeyInput/">Sample Python Turtle - Key Input</a>
                         <a href="https://github.com/isaiahnoelsalazar/SamplePythonTurtleYellowDucky/">Sample Python Turtle - Yellow Ducky</a>
                     </div>
                     <div id="spacer"></div>
