Added more project links and updated CV

--- a/index.html
+++ b/index.html
@@ -45,14 +45,17 @@
                 "prefetch": [
                     {
                         "urls": [
+                            "https://github.com/isaiahnoelsalazar/BusSeatingArrangementExample/",
                             "https://github.com/isaiahnoelsalazar/CSSimpleFunctions/",
                             "https://github.com/isaiahnoelsalazar/POS-System-Prototype/",
+                            "https://github.com/isaiahnoelsalazar/saia_ProjectA/",
                             "https://github.com/isaiahnoelsalazar/SalazarIsaiahNoel_BSIT701P_Lab2/",
                             "https://github.com/isaiahnoelsalazar/SamplePythonTurtleKeyInput/",
                             "https://github.com/isaiahnoelsalazar/SamplePythonTurtleYellowDucky/",
                             "https://github.com/isaiahnoelsalazar/sAP/",
                             "https://github.com/isaiahnoelsalazar/ScreenRecorder/",
                             "https://github.com/isaiahnoelsalazar/SimpleFunctions/",
+                            "https://github.com/isaiahnoelsalazar/SkillSwap/",
                             "https://isaiahnoelsalazar.github.io/bad-phone-number-inputs/",
                             "https://isaiahnoelsalazar.github.io/basabasa-download/",
                             "https://isaiahnoelsalazar.github.io/billcalculator-download/",
@@ -196,12 +199,15 @@
                     <div class="page-list">
                         <a href="https://isaiahnoelsalazar.github.io/basabasa-download/">Basabasa: Free Manga Reader App (Android 7.1+)</a>
                         <a href="https://isaiahnoelsalazar.github.io/billcalculator-download/">Bill Calculator (Android 4.1+)</a>
+                        <a href="https://github.com/isaiahnoelsalazar/BusSeatingArrangementExample/">BusSeatingArrangementExample (Android 4.1+)</a>
                         <a href="https://isaiahnoelsalazar.github.io/compass-download/">Compass (Android 4.2+)</a>
                         <a href="https://isaiahnoelsalazar.github.io/htmleditor-download/">HTML Editor (Android 4.2+)</a>
                         <a href="https://isaiahnoelsalazar.github.io/matchupgame-download/">Match Up Game (Android 7.0+) | School Assignment</a>
                         <a href="https://isaiahnoelsalazar.github.io/note-download/">Note (Android 4.1+)</a>
+                        <a href="https://github.com/isaiahnoelsalazar/saia_ProjectA/">saia_ProjectA (Android 6.0+)</a>
                         <a href="https://github.com/isaiahnoelsalazar/sAP/">sAP (Android 6.0+)</a>
                         <a href="https://isaiahnoelsalazar.github.io/shoppinglist-download/">Shopping List App (Android 7.0+)</a>
+                        <a href="https://github.com/isaiahnoelsalazar/SkillSwap/">SkillSwap (Android 7.1+)</a>
                         <a href="https://isaiahnoelsalazar.github.io/squulite-download/">SQuuLite (Android 7.0+)</a>
                         <a href="https://isaiahnoelsalazar.github.io/studentregistrationapp-download/">Student Registration App (Android 7.0+)</a>
                     </div>
