Added more project links

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                         "urls": [
                             "https://github.com/isaiahnoelsalazar/BusSeatingArrangementExample/",
                             "https://github.com/isaiahnoelsalazar/CSSimpleFunctions/",
+                            "https://github.com/isaiahnoelsalazar/Monay/",
                             "https://github.com/isaiahnoelsalazar/POS-System-Prototype/",
                             "https://github.com/isaiahnoelsalazar/saia_ProjectA/",
                             "https://github.com/isaiahnoelsalazar/SalazarIsaiahNoel_BSIT701P_Lab2/",
@@ -56,6 +57,7 @@
                             "https://github.com/isaiahnoelsalazar/ScreenRecorder/",
                             "https://github.com/isaiahnoelsalazar/SimpleFunctions/",
                             "https://github.com/isaiahnoelsalazar/SkillSwap/",
+                            "https://github.com/isaiahnoelsalazar/Ulap/",
                             "https://isaiahnoelsalazar.github.io/bad-phone-number-inputs/",
                             "https://isaiahnoelsalazar.github.io/basabasa-download/",
                             "https://isaiahnoelsalazar.github.io/billcalculator-download/",
@@ -203,13 +205,15 @@
                         <a href="https://isaiahnoelsalazar.github.io/compass-download/">Compass (Android 4.2+)</a>
                         <a href="https://isaiahnoelsalazar.github.io/htmleditor-download/">HTML Editor (Android 4.2+)</a>
                         <a href="https://isaiahnoelsalazar.github.io/matchupgame-download/">Match Up Game (Android 7.0+) | School Assignment</a>
+                        <a href="https://github.com/isaiahnoelsalazar/Monay/">Monay (Android 7.0+) | School Assignment</a>
                         <a href="https://isaiahnoelsalazar.github.io/note-download/">Note (Android 4.1+)</a>
                         <a href="https://github.com/isaiahnoelsalazar/saia_ProjectA/">saia_ProjectA (Android 6.0+)</a>
                         <a href="https://github.com/isaiahnoelsalazar/sAP/">sAP (Android 6.0+)</a>
                         <a href="https://isaiahnoelsalazar.github.io/shoppinglist-download/">Shopping List App (Android 7.0+)</a>
-                        <a href="https://github.com/isaiahnoelsalazar/SkillSwap/">SkillSwap (Android 7.1+)</a>
+                        <a href="https://github.com/isaiahnoelsalazar/SkillSwap/">SkillSwap (Android 7.0+)</a>
                         <a href="https://isaiahnoelsalazar.github.io/squulite-download/">SQuuLite (Android 7.0+)</a>
                         <a href="https://isaiahnoelsalazar.github.io/studentregistrationapp-download/">Student Registration App (Android 7.0+)</a>
+                        <a href="https://github.com/isaiahnoelsalazar/Ulap/">Ulap (Android 7.0+)</a>
                     </div>
                     <div id="spacer"></div>
                     <div id="separator"></div>
@@ -225,8 +229,8 @@
                     <div id="spacer"></div>
                     <h2>Python Programs</h2>
                     <div class="page-list">
-                        <a href="https://github.com/isaiahnoelsalazar/SamplePythonTurtleKeyInput/">Sample Python Turtle - Key Input</a>
-                        <a href="https://github.com/isaiahnoelsalazar/SamplePythonTurtleYellowDucky/">Sample Python Turtle - Yellow Ducky</a>
+                        <a href="https://github.com/isaiahnoelsalazar/SamplePythonTurtleKeyInput/">Sample Python Turtle - Key Input | School Assignment</a>
+                        <a href="https://github.com/isaiahnoelsalazar/SamplePythonTurtleYellowDucky/">Sample Python Turtle - Yellow Ducky | School Assignment</a>
                     </div>
                     <div id="spacer"></div>
                     <div id="separator"></div>
